third_party/move/move-compiler-v2/tests/lambda/inline-parity/unused_lambda_param.lambda.exp

Diagnostics:
warning: Unused anonymous function parameter `x`. Consider removing or prefixing with an underscore: `_x`
  ┌─ tests/lambda/inline-parity/unused_lambda_param.move:7:18
  │
7 │         test(0, |x| 1);
  │                  ^

// -- Model dump before bytecode pipeline
module 0xc0ffee::m {
    private fun test(p: u64,f: |u64|u64): u64 {
        (f)(p)
    }
    private fun unused_lambda() {
        m::test(0, closure#0m::unused_lambda$lambda$1());
        Tuple()
    }
    private fun unused_lambda_suppressed1() {
        m::test(0, closure#0m::unused_lambda_suppressed1$lambda$1());
        Tuple()
    }
    private fun unused_lambda_suppressed2() {
        m::test(0, closure#0m::unused_lambda_suppressed2$lambda$1());
        Tuple()
    }
    private fun unused_lambda$lambda$1(x: u64): u64 {
        1
    }
    private fun unused_lambda_suppressed1$lambda$1(_x: u64): u64 {
        1
    }
    private fun unused_lambda_suppressed2$lambda$1(param$0: u64): u64 {
        {
          let _: u64 = param$0;
          1
        }
    }
} // end 0xc0ffee::m

// -- Sourcified model before bytecode pipeline
module 0xc0ffee::m {
    fun test(p: u64, f: |u64|u64): u64 {
        f(p)
    }
    fun unused_lambda() {
        test(0, |arg0| unused_lambda$lambda$1(arg0));
    }
    fun unused_lambda_suppressed1() {
        test(0, |arg0| unused_lambda_suppressed1$lambda$1(arg0));
    }
    fun unused_lambda_suppressed2() {
        test(0, |arg0| unused_lambda_suppressed2$lambda$1(arg0));
    }
    fun unused_lambda$lambda$1(x: u64): u64 {
        1
    }
    fun unused_lambda_suppressed1$lambda$1(_x: u64): u64 {
        1
    }
    fun unused_lambda_suppressed2$lambda$1(param$0: u64): u64 {
        let _ = param$0;
        1
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/unused_lambda_param.move:3:9
  │
3 │         f(p)
  │         ^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
  ┌─ tests/lambda/inline-parity/unused_lambda_param.move:7:17
  │
7 │         test(0, |x| 1);
  │                 ^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/unused_lambda_param.move:11:17
   │
11 │         test(0, |_x| 1);
   │                 ^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/unused_lambda_param.move:15:17
   │
15 │         test(0, |_| 1);
   │                 ^^^^^
